fixed the fwoosh thing in chat on smaller screens

--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -170,6 +170,7 @@
 @media only screen and (min-width: 481px) and (max-width: 768px) {
   .chat {
     margin-top: 0;
+    width: 73.8%;
   }
 
   .chat-sidebar {
@@ -181,5 +182,9 @@
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
   .chat-sidebar {
     display: none;
+  }
+
+  .chat {
+    width: 80.25%;
   }
 }
